name:                datomic-peer
version:             0.1.0
synopsis:            Datomic peer for Haskell
description:         Datomic peer for Haskell
homepage:            http://github.com/mwotton/datomic-peer
license:             BSD3
license-file:        LICENSE
author:              Mark Wotton
maintainer:          mwotton@gmail.com

category:            Codec
build-type:          Simple
cabal-version:       >=1.8
source-repository head
  type:        git
  location:    git://github.com/mwotton/datomic-peer.git

library
  exposed-modules: Database.Datomic.Peer
  other-modules:   
  hs-source-dirs:  src
  extra-libraries: 
  build-depends:   base, bytestring

test-suite spec
  type:            exitcode-stdio-1.0
  main-is:         Spec.hs
  hs-source-dirs:  test
  extra-libraries: 
  build-depends:   base, hspec == 1.3.*, datomic-peer, QuickCheck, bytestring
